Add socket stack + Pug layout
Added socket stack moving main.js to client and set the socket way for
it. Added a Pug layout too, to extends a basic html and some
dependencies.

Other small fixes:
 - npm-debug ignored
 - config server port
 - move script
 - static directory

--- a/app/view/main.pug
+++ b/app/view/main.pug
@@ -1,8 +1,10 @@
-h1 Chat
-#Chat
+extend base/layout.pug
+
+block content
+  #chat.chat
     .chat__messages
-        ul.chat__messages-list
-            li.chat__messages-item
-    form.chat__messages-form
-        textarea
-        button(type="submit")
+      ul.chat__messages-list
+        li.chat__messages-item
+    form(method="post").chat__messages-form
+      textarea(placeholder="Write a message\nAnd, please, be cool!")
+      button#send(type="submit")
