Fix static content on ./resource
Fixed static content using a absolute path instead of a relative. Added
title to Pug (Just to test).

--- a/app/view/base/layout.pug
+++ b/app/view/base/layout.pug
@@ -4,10 +4,10 @@ html(lang="en")
     meta(charset="utf-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
-    title title
+    title!=title
   body
     header
-      h1 title
+      h1!=title
     block content
     footer
     script(src="/socket.io/socket.io.js")
