--- a/app/view/base/layout.pug
+++ b/app/view/base/layout.pug
@@ -5,7 +5,8 @@ html(lang="en")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
     title!=title
-  body
+    link(rel="stylesheet", href="/resource/style.css")
+  body.container
     header
       h1!=title
     block content
