Fix html.getElement + Build + Client emits
Fixed html.getElement and added id to useful elements. Re-factor on
dismissEvent + Added client/server emits and listeners. Removed .es6 files
from build.

--- a/app/view/main.pug
+++ b/app/view/main.pug
@@ -5,6 +5,6 @@ block content
     .chat__messages
       ul#list.chat__messages-list
         li.chat__messages-item
-    form(method="post")#form.chat__messages-form
-      textarea(placeholder="Write a message\nAnd, please, be cool!")
+    form#form.chat__messages-form
+      textarea#text(placeholder="Write a message\nAnd, please, be cool!")
       button#send(type="submit")
