--- a/app/view/main.pug
+++ b/app/view/main.pug
@@ -4,7 +4,6 @@ block content
   .chat
     .chat__messages
       ul#list.chat__messages-list
-        li.chat__messages-item
     form#form.chat__messages-form
-      textarea#text(placeholder="Write a message\nAnd, please, be cool!")
-      button#send(type="submit")
+      textarea#field(placeholder="...")
+      button#send(type="submit") Enviar
