--- a/app/style/component/header.styl
+++ b/app/style/component/header.styl
@@ -1,12 +1,10 @@
-header-color = #fff
-
 .header
-  border-bottom: 1px solid header-color
+  border-bottom: 1px solid $header-color
 
   > .title
     font-size: 3em
     font-weight: 100
-    color: header-color
+    color: $header-color
     text-align: center
     text-shadow: 0 0 5px rgba(#000, .75)
 
