--- a/app/style/index.styl
+++ b/app/style/index.styl
@@ -1,3 +1,16 @@
+// Base theme settings
+$base-font-size = 1.6rem
+
+// Container theme settings
+$container-color = #da0007
+$container-color-light = #e61824
+
+// Header theme settings
+$header-color = #fff
+
+// Form theme settings
+$form-color = #fff
+
 @import 'base/element'
 @import 'base/reset'
 @import 'base/rupture'
