--- a/app/view/main.pug
+++ b/app/view/main.pug
@@ -4,6 +4,11 @@ block content
   .chat
     .chat__messages
       ul#list.chat__messages-list
-    form#form.chat__messages-form
-      textarea#field(placeholder="...")
-      button#send(type="submit") Enviar
+    //- form#form.chat__messages-form
+    //-   textarea#field.field(placeholder="...", rows="2")
+    //-   button#send.button(type="submit") Enviar
+
+
+  form.form
+    textarea.message(rows="2", placeholder="Message ...")
+    button.send(type="submit") Send
