--- a/app/style/base/element.styl
+++ b/app/style/base/element.styl
@@ -1,9 +1,9 @@
 /**
  * Heading elements. <h1..6>
  */
-heading = h1, h2, h3, h4, h5, h6
+heading = 'h1, h2, h3, h4, h5, h6'
 
 /**
  * Form itens.
  */
-form-item = textarea, button
+form-item = 'textarea, button, input[type=\"text\"]'
