--- a/app/style/base/reset.styl
+++ b/app/style/base/reset.styl
@@ -7,12 +7,22 @@ html
 
 body
 {form-item}
-  font-size: 1.6rem
+  font-size: $base-font-size
   font-family: 'Roboto', sans-serif
+  font-weight: 300
+  line-height: 1.5
+  color: #fff
 
 body
 ul
 {heading}
   margin: 0
 
-
+{form-item}
+  box-sizing: border-box
+  padding: 0
+  border: 0 none transparent
+  background-color: transparent
+  background-image: none
+  &:focus
+    outline: 0 none transparent
