--- a/app/style/component/container.styl
+++ b/app/style/component/container.styl
@@ -1,3 +1,3 @@
 .container
-  background-color: #fc4112
-  background-image: linear-gradient(transparent, #fe743d)
+  background-color: $container-color
+  background-image: linear-gradient(transparent, $container-color-light)
