Style form & messages + Fix timeout + Add markdown
Styled form and messages. Form textarea is now just a p element that is
changed on html5. Fixed timeout and added markdown on messages.

--- a/app/style/base/element.styl
+++ b/app/style/base/element.styl
@@ -7,3 +7,8 @@ heading = 'h1, h2, h3, h4, h5, h6'
  * Form itens.
  */
 form-item = 'textarea, button, input[type=\"text\"]'
+
+/**
+ * List elements.
+ */
+list = 'ol, ul'
