--- a/app/style/base/reset.styl
+++ b/app/style/base/reset.styl
@@ -14,9 +14,12 @@ body
   color: #fff
 
 body
-ul
-{heading}
+p
+{list + ',' + heading}
   margin: 0
+
+{list}
+  padding: 0
 
 {form-item}
   box-sizing: border-box
@@ -24,5 +27,9 @@ ul
   border: 0 none transparent
   background-color: transparent
   background-image: none
+
+
+p
+{form-item}
   &:focus
     outline: 0 none transparent
