--- a/app/style/index.styl
+++ b/app/style/index.styl
@@ -3,7 +3,7 @@ $base-font-size = 1.6rem
 
 // Container theme settings
 $container-color = #da0007
-$container-color-light = #e61824
+$container-color-light = mix(#e61824, #fff, 75%)
 
 // Header theme settings
 $header-color = #fff
