--- a/app/resource/style.css
+++ b/app/resource/style.css
@@ -16,6 +16,8 @@ input[type=\"text\"] {
   color: #fff;
 }
 body,
+p,
+ol,
 ul,
 h1,
 h2,
@@ -24,6 +26,10 @@ h4,
 h5,
 h6 {
   margin: 0;
+}
+ol,
+ul {
+  padding: 0;
 }
 textarea,
 button,
@@ -34,17 +40,166 @@ input[type=\"text\"] {
   background-color: transparent;
   background-image: none;
 }
+p:focus,
 textarea:focus,
 button:focus,
 input[type=\"text\"]:focus {
   outline: 0 none transparent;
 }
 .chat {
-  margin-bottom: 51px;
+  box-sizing: border-box;
+  overflow-y: auto;
+  overflow-x: hidden;
+  height: calc(100% - (73px + 51px));
+}
+@media only screen and (min-width: 540px) {
+  .chat {
+    height: calc(100% - (96px + 51px));
+  }
+}
+.chat > .messages {
+  overflow: scroll hidden;
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  padding: 6px;
+}
+@media only screen and (min-width: 540px) {
+  .chat > .messages {
+    padding: 6px 12px;
+  }
+}
+.chat > .messages > .message {
+  display: inline-block;
+  margin: 6px;
+  padding: 3px 12px;
+  color: #333;
+  background-color: #fff;
+  border-radius: 12px;
+  animation: vanish 31s;
+}
+@media only screen and (min-width: 540px) {
+  .chat > .messages > .message {
+    margin: 12px;
+  }
+}
+.chat > .messages > .message > .text {
+  display: inline-block;
+}
+.chat > .messages > .message > .time {
+  font-size: 0.7em;
+}
+@-moz-keyframes vanish {
+  0% {
+    transform: scale(1);
+  }
+  1% {
+    transform: scale(1.3);
+  }
+  2% {
+    transform: scale(0.9);
+  }
+  3% {
+    transform: scale(1.1);
+  }
+  4% {
+    transform: scale(1);
+  }
+  80% {
+    opacity: 1;
+  }
+  95% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-100%);
+    opacity: 0;
+  }
+}
+@-webkit-keyframes vanish {
+  0% {
+    transform: scale(1);
+  }
+  1% {
+    transform: scale(1.3);
+  }
+  2% {
+    transform: scale(0.9);
+  }
+  3% {
+    transform: scale(1.1);
+  }
+  4% {
+    transform: scale(1);
+  }
+  80% {
+    opacity: 1;
+  }
+  95% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-100%);
+    opacity: 0;
+  }
+}
+@-o-keyframes vanish {
+  0% {
+    transform: scale(1);
+  }
+  1% {
+    transform: scale(1.3);
+  }
+  2% {
+    transform: scale(0.9);
+  }
+  3% {
+    transform: scale(1.1);
+  }
+  4% {
+    transform: scale(1);
+  }
+  80% {
+    opacity: 1;
+  }
+  95% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-100%);
+    opacity: 0;
+  }
+}
+@keyframes vanish {
+  0% {
+    transform: scale(1);
+  }
+  1% {
+    transform: scale(1.3);
+  }
+  2% {
+    transform: scale(0.9);
+  }
+  3% {
+    transform: scale(1.1);
+  }
+  4% {
+    transform: scale(1);
+  }
+  80% {
+    opacity: 1;
+  }
+  95% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-100%);
+    opacity: 0;
+  }
 }
 .container {
   background-color: #da0007;
-  background-image: linear-gradient(transparent, #e61824);
+  background-image: linear-gradient(transparent, #ec515a);
 }
 .form {
   position: absolute;
@@ -65,14 +220,21 @@ input[type=\"text\"]:focus {
   }
 }
 .form > .message {
+  position: relative;
   float: left;
-  width: 75%;
-  height: 50px;
-  resize: none;
+  min-width: 75%;
+  min-height: 50px;
+}
+.form > .message::before {
+  position: absolute;
+  content: '...';
+}
+.form > .message:hover::before {
+  content: none;
 }
 @media only screen and (min-width: 540px) {
   .form > .message {
-    width: 80%;
+    min-width: 80%;
   }
 }
 .form > .send {
