--- a/app/style/component/header.styl
+++ b/app/style/component/header.styl
@@ -6,8 +6,8 @@
     font-weight: 100
     color: $header-color
     text-align: center
-    text-shadow: 0 0 5px rgba(#000, .75)
+    text-shadow: 0 0 5px rgba(#fff, .75)
 
     +above(540px)
       font-size: 4em
-      text-shadow: 0 0 10px rgba(#000, .75)
+      text-shadow: 0 0 10px rgba(#fff, .75)
